<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">联系人邮箱C头像</string>
    <string name="action_settings">设置</string>
    <string name="empty">empty</string>
    <string name="clear_all_avatar">清除全部头像</string>
    <string name="set_all_avatar">设置全部头像</string>
    <string name="add_qq_email">添加QQ邮箱</string>
    <string name="input_qq_number">输入QQ号码</string>
    <string name="add_new_qq_email">添加新的QQ邮箱</string>
    <string name="please_input_true_qq_number">请出输入正确的QQ号</string>
    <string name="add_qq_mail_ok">成功添加QQ邮箱</string>
    <string name="add_qq_mail_error">添加QQ邮箱失败</string>
    <string name="refresh_contact_list">刷新联系人列表</string>
    <string name="edit_qq_num">编辑QQ号</string>
    <string name="remove_avatar">移除头像</string>
    <string name="update_avatar">更新头像</string>
    <string name="now_email">当前邮箱</string>
    <string name="edit">修改</string>
    <string name="input_new_qq_number">输入新的QQ号</string>
    <string name="edit_qq_email">修改你的QQ邮箱</string>
    <string name="no_found_qq_email">未找到QQ邮箱</string>
    <string name="no_found_qq_number">未找到QQ号</string>
    <string name="delete_this_email">删除该邮箱</string>
    <string name="delete_this_email_error">删除该邮箱失败</string>
    <string name="delete_this_email_succ">成功删除该邮箱</string>
    <string name="contact_list_is_already_refresh">联系人列表信息已刷新</string>
    <string name="clear_all_contact_avatar">清除所有联系人头像</string>
    <string name="downloading_all_contact_avatar">开始下载所有联系人头像</string>
    <string name="the_qq_number_is_not_change">QQ号没有被修改</string>
    <string name="edit_email_succ">成功修改邮箱</string>
    <string name="edit_email_error">修改邮箱失败</string>
    <string name="select_all">全选</string>
    <string name="select_x">反选</string>
    <string name="import_qq_list">导入QQ列表</string>
    <string name="exit">退出</string>
    <string name="title_activity_import">导入QQ列表</string>
    <string name="select_qq_list_file">选择QQ列表文件</string>
    <string name="select_your_qq_list_file">选择你的QQ列表文件</string>
    <string name="please_install_a_file_manager">请安装一个文件管理器来选择文件</string>
    <string name="not_chose_any_file">未选择任何文件</string>
    <string name="chose_file_error">选择文件失败</string>
    <string name="open_file_error">打开文件失败</string>
    <string name="delete_email">删除邮箱</string>
    <string name="delete_avatar">删除头像</string>
    <string name="by_loveyu">By loveyu</string>
    <string name="explain_about_import_file">导入的文件必须是UTF-8无BOM格式，且每行只能包含QQ号和对应的姓名，中间用制表符分割，QQ号在前。</string>
    <string name="now_chose_file">当前选择文件：</string>
    <string name="none">无</string>
    <string name="now_list_status">当前列表状态：</string>
    <string name="waiting_import_file">等待导入文件....</string>
    <string name="importing_file">文件导入中....,请稍等</string>
    <string name="begin_import_to_contact">开始导入到通讯录匹配</string>
    <string name="record">记录</string>
    <string name="loading_contact">联系人读取中 . . . . . .</string>
    <string name="action_chose">操作选择</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="download_all_avatar_confirm">确定下载所有联系人头像？</string>
    <string name="delete_all_avatar_confirm">确定删除所有头像？</string>
    <string name="delete_all_avatar_msg">所有头像将被移除，且无法恢复，确认操作？？？</string>
    <string name="download_all_avatar_msg">只会下载不存在头像的联系人的QQ头像，存在头像的不做操作！</string>
    <string name="download_avatar_finish">所有头像下载完成</string>
    <string name="title_activity_ad">你的主界面广告已影藏</string>
    <string name="avatar_desc_loading">头像加载</string>
    <string name="hide_ad">影藏广告</string>
    <string name="view_get_qq_list_help">Click ME:访问 http://www.loveyu.org/3151.html 查看获取QQ列表的方法</string>
    <string name="about_app">关于APP</string>
    <string name="title_activity_about">关于该APP</string>
    <string name="found_version_update">发现新版本</string>
    <string name="update_now">立即更新</string>

</resources>
