<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <GridLayout
        android:id="@+id/GridLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_border" >

        <RelativeLayout
            android:id="@+id/SelectCheckBox"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="right|top" >

            <Button
                android:id="@+id/buttonSelectX"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/buttonSelectAll"
                android:text="@string/select_x" />

            <Button
                android:id="@+id/buttonSelectAll"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/select_all" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </GridLayout>

    <GridLayout
        android:id="@+id/GridLayoutFooter"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/footer_border" >

        <RelativeLayout
            android:id="@+id/SelectContactAction"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="left|bottom" >

            <Button
                android:id="@+id/buttonSelectActionUpdateAvatar"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/update_avatar" />

            <Button
                android:id="@+id/buttonSelectActionDeleteEmail"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/buttonSelectActionUpdateAvatar"
                android:text="@string/delete_email" />

            <Button
                android:id="@+id/buttonSelectActionDeleteAvatar"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/buttonSelectActionDeleteEmail"
                android:text="@string/delete_avatar" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/by_loveyu"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </GridLayout>

    <ListView
        android:id="@+id/ConcatlistView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/adView"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/GridLayoutHeader" >
    </ListView>

    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/GridLayoutFooter"
        android:layout_alignParentLeft="true" >
    </RelativeLayout>

</RelativeLayout>